apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_chunkaddress_new(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_bytes(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_clone_client(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_client(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_constructor_client_init(void
    
);
uint64_t uniffi_ant_ffi_fn_constructor_client_init_local(void
    
);
uint64_t uniffi_ant_ffi_fn_constructor_client_init_with_peers(RustBuffer peers, void*_Nonnull evm_network, RustBuffer data_dir
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_cost(void*_Nonnull ptr, void*_Nonnull archive
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_get(void*_Nonnull ptr, void*_Nonnull data_map
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_get_public(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_put(void*_Nonnull ptr, void*_Nonnull archive, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_put_public(void*_Nonnull ptr, void*_Nonnull archive, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_chunk_cost(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_chunk_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_chunk_put(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_data_cost(void*_Nonnull ptr, RustBuffer data
);