dart/ant_ffi/lib/src/native/bindings.dart


  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_from_hexPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex');
  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_from_hex =
      _uniffi_ant_ffi_fn_constructor_chunkaddress_from_hexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_constructor_chunkaddress_new(
    RustBuffer bytes,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_constructor_chunkaddress_new(
      bytes,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_newPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  RustBuffer, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_constructor_chunkaddress_new');
  late final _uniffi_ant_ffi_fn_constructor_chunkaddress_new =
      _uniffi_ant_ffi_fn_constructor_chunkaddress_newPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              RustBuffer, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_bytes(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunkaddress_to_bytes(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunkaddress_to_bytesPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunkaddress_to_bytes');
  late final _uniffi_ant_ffi_fn_method_chunkaddress_to_bytes =
      _uniffi_ant_ffi_fn_method_chunkaddress_to_bytesPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  RustBuffer uniffi_ant_ffi_fn_method_chunkaddress_to_hex(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_method_chunkaddress_to_hex(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_method_chunkaddress_to_hexPtr = _lookup<
          ffi.NativeFunction<
              RustBuffer Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>>(
      'uniffi_ant_ffi_fn_method_chunkaddress_to_hex');
  late final _uniffi_ant_ffi_fn_method_chunkaddress_to_hex =
      _uniffi_ant_ffi_fn_method_chunkaddress_to_hexPtr.asFunction<
          RustBuffer Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  ffi.Pointer<ffi.Void> uniffi_ant_ffi_fn_clone_client(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_clone_client(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_clone_clientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<RustCallStatus>)>>('uniffi_ant_ffi_fn_clone_client');
  late final _uniffi_ant_ffi_fn_clone_client =
      _uniffi_ant_ffi_fn_clone_clientPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  void uniffi_ant_ffi_fn_free_client(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<RustCallStatus> out_status,
  ) {
    return _uniffi_ant_ffi_fn_free_client(
      ptr,
      out_status,
    );
  }

  late final _uniffi_ant_ffi_fn_free_clientPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<RustCallStatus>)>>('uniffi_ant_ffi_fn_free_client');
  late final _uniffi_ant_ffi_fn_free_client =
      _uniffi_ant_ffi_fn_free_clientPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<RustCallStatus>)>();

  int uniffi_ant_ffi_fn_constructor_client_init() {
    return _uniffi_ant_ffi_fn_constructor_client_init();
  }

  late final _uniffi_ant_ffi_fn_constructor_client_initPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'uniffi_ant_ffi_fn_constructor_client_init');
  late final _uniffi_ant_ffi_fn_constructor_client_init =
      _uniffi_ant_ffi_fn_constructor_client_initPtr
          .asFunction<int Function()>();

  int uniffi_ant_ffi_fn_constructor_client_init_local() {
    return _uniffi_ant_ffi_fn_constructor_client_init_local();
  }

  late final _uniffi_ant_ffi_fn_constructor_client_init_localPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'uniffi_ant_ffi_fn_constructor_client_init_local');
  late final _uniffi_ant_ffi_fn_constructor_client_init_local =
      _uniffi_ant_ffi_fn_constructor_client_init_localPtr
          .asFunction<int Function()>();

  int uniffi_ant_ffi_fn_constructor_client_init_with_peers(
    RustBuffer peers,
    ffi.Pointer<ffi.Void> evm_network,
    RustBuffer data_dir,
  ) {
    return _uniffi_ant_ffi_fn_constructor_client_init_with_peers(
      peers,
      evm_network,
      data_dir,
    );
  }

  late final _uniffi_ant_ffi_fn_constructor_client_init_with_peersPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  RustBuffer, ffi.Pointer<ffi.Void>, RustBuffer)>>(
      'uniffi_ant_ffi_fn_constructor_client_init_with_peers');
  late final _uniffi_ant_ffi_fn_constructor_client_init_with_peers =
      _uniffi_ant_ffi_fn_constructor_client_init_with_peersPtr.asFunction<
          int Function(RustBuffer, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_archive_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> archive,
  ) {
    return _uniffi_ant_ffi_fn_method_client_archive_cost(
      ptr,
      archive,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_archive_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_archive_cost');
  late final _uniffi_ant_ffi_fn_method_client_archive_cost =
      _uniffi_ant_ffi_fn_method_client_archive_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_archive_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> data_map,
  ) {
    return _uniffi_ant_ffi_fn_method_client_archive_get(
      ptr,
      data_map,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_archive_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_archive_get');
  late final _uniffi_ant_ffi_fn_method_client_archive_get =
      _uniffi_ant_ffi_fn_method_client_archive_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_archive_get_public(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
  ) {
    return _uniffi_ant_ffi_fn_method_client_archive_get_public(
      ptr,
      address,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_archive_get_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_archive_get_public');
  late final _uniffi_ant_ffi_fn_method_client_archive_get_public =
      _uniffi_ant_ffi_fn_method_client_archive_get_publicPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_archive_put(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> archive,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_archive_put(
      ptr,
      archive,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_archive_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_archive_put');
  late final _uniffi_ant_ffi_fn_method_client_archive_put =
      _uniffi_ant_ffi_fn_method_client_archive_putPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_archive_put_public(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> archive,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_archive_put_public(
      ptr,
      archive,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_archive_put_publicPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>>(
      'uniffi_ant_ffi_fn_method_client_archive_put_public');
  late final _uniffi_ant_ffi_fn_method_client_archive_put_public =
      _uniffi_ant_ffi_fn_method_client_archive_put_publicPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_chunk_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_chunk_cost(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_chunk_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_chunk_cost');
  late final _uniffi_ant_ffi_fn_method_client_chunk_cost =
      _uniffi_ant_ffi_fn_method_client_chunk_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_chunk_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_chunk_get(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_chunk_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_chunk_get');
  late final _uniffi_ant_ffi_fn_method_client_chunk_get =
      _uniffi_ant_ffi_fn_method_client_chunk_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_chunk_put(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer data,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_chunk_put(
      ptr,
      data,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_chunk_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_chunk_put');
  late final _uniffi_ant_ffi_fn_method_client_chunk_put =
      _uniffi_ant_ffi_fn_method_client_chunk_putPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, RustBuffer, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_data_cost(
    ffi.Pointer<ffi.Void> ptr,
    RustBuffer data,
  ) {
    return _uniffi_ant_ffi_fn_method_client_data_cost(
      ptr,
      data,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_data_costPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_data_cost');
  late final _uniffi_ant_ffi_fn_method_client_data_cost =
      _uniffi_ant_ffi_fn_method_client_data_costPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, RustBuffer)>();
